--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -99,7 +99,7 @@
                                                 <div class="form-group">
                                                     <label>Choose a Role</label>
                                                     <select th:fi name="role" class="custom-select">
-                                                        <option th:value="''" th:text="Select"></option>
+<!--                                                        <option th:value="''" th:text="Select"></option>-->
                                                         <option th:each="role : ${roles}" th:text="${role.description}" th:value="${role.id}"></option>
                                                     </select>
                                                 </div>
@@ -162,7 +162,7 @@
                                                 <td th:text="${user.role.description}"></td>
                                                 <td class="actions">
                                                     <a href="#"><button type="button" class="btn btn-warning btn-sm">Update</button></a>
-                                                    <a href="#" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
+                                                    <a th:href="@{/user/delete/{id}(id=${user.userName})}" class="delete-row"><button type="button" class="btn btn-secondary btn-sm">Delete</button></a>
                                                 </td>
                                             </tr>
 
