--- a/src/main/resources/templates/project/create.html
+++ b/src/main/resources/templates/project/create.html
@@ -120,7 +120,7 @@
                                             <tr>
                                                 <th scope="col">Project Code</th>
                                                 <th scope="col">Project Name</th>
-                                                <th scope="col">Start - End Date</th>
+                                                <th scope="col">Start / End Date</th>
                                                 <th scope="col">Manager</th>
                                                 <th scope="col">Status</th>
                                                 <th scope="col">Action</th>
@@ -130,13 +130,13 @@
                                             <tr th:each="project : ${projects}">
                                                 <td th:text="${project.projectCode}"></td>
                                                 <td th:text="${project.projectName}"></td>
-                                                <td th:text="${project.startDate + ' ' + project.endDate}"></td>
+                                                <td th:text="${#temporals.format(project.startDate, 'MM.dd.yyyy') + ' / ' + #temporals.format(project.endDate, 'MM.dd.yyyy')}"></td>
                                                 <td th:text="${project.assignedManager.firstName + ' ' + project.assignedManager.lastName}"></td>
                                                 <td th:text="${project.projectStatus.value}"></td>
                                                 <td>
-                                                    <a href="#"><button type="button" class="btn btn-warning rounded-0">Update</button></a>
+                                                    <a th:href="@{/project/update/{id}(id=${project.projectCode})}"><button type="button" class="btn btn-warning rounded-0">Update</button></a>
                                                     <a th:href="@{/project/delete/{id}(id=${project.projectCode})}"><button type="button" class="btn btn-danger rounded-0">Delete</button></a>
-                                                    <a href="#"><button type="button" class="btn btn-info rounded-0">Complete</button></a>
+                                                    <a th:href="@{/project/complete/{id}(id=${project.projectCode})}"><button type="button" class="btn btn-info rounded-0">Complete</button></a>
                                                 </td>
                                             </tr>
                                             </tbody>
